--- a/store.html
+++ b/store.html
@@ -6,8 +6,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <title>BYGOZ E-LEARNING PRIVATE LIMITED</title>
     <link rel="icon" href="THEME/favicon.ico" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet"
-        type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css">
     <link href="THEME/plugins/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="THEME/plugins/node-waves/waves.css" rel="stylesheet" />
@@ -19,7 +18,6 @@
         .btnStore {
             color: #03A9F4;
             font-size: 20px;
-            padding: 3%;
         }
     </style>
 </head>
@@ -53,9 +51,8 @@
     <nav class="navbar">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#navbar-collapse" aria-expanded="false"></a>
-                <a href="javascript:void(0);" class="bars"></a>
+                <a href="#" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
+                <a href="#" class="bars"></a>
                 <a href="#" class="lnkHome"><img src="logo.png" alt="Logo" /></a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -66,11 +63,6 @@
                     <li>
                         <a href="#" class="lnkHome" data-close="true">
                             <i class="material-icons">home</i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);" class="js-search" data-close="true">
-                            <i class="material-icons">search</i>
                         </a>
                     </li>
                 </ul>
@@ -92,7 +84,7 @@
                     <li>
                         <a href="#" class="lnkHome">
                             <i class="material-icons">home</i>
-                            <span>Home</span>
+                            <span>HOME</span>
                         </a>
                         <hr style="margin-bottom: 0; margin-top: 0;" />
                     </li>
@@ -100,7 +92,7 @@
                     <li>
                         <a href="#" class="lnkLibrary">
                             <i class="material-icons">account_balance</i>
-                            <span>Library</span>
+                            <span>LIBRARY</span>
                         </a>
                         <hr style="margin-bottom: 0; margin-top: 0;" />
                     </li>
@@ -108,7 +100,79 @@
                     <li>
                         <a href="#" class="lnkStore">
                             <i class="material-icons">store</i>
-                            <span>Store</span>
+                            <span>STORE</span>
+                        </a>
+                        <hr style="margin-bottom: 0; margin-top: 0;" />
+                    </li>
+
+                    <li>
+                        <a href="#" class="lnkPurchase">
+                            <i class="material-icons">attach_money</i>
+                            <span>PURCHASE</span>
+                        </a>
+                        <hr style="margin-bottom: 0; margin-top: 0;" />
+                    </li>
+
+                    <li>
+                        <a href="#" class="lnkCart">
+                            <i class="material-icons">add_shopping_cart</i>
+                            <span>CART</span>
+                        </a>
+                        <hr style="margin-bottom: 0; margin-top: 0;" />
+                    </li>
+
+                    <li>
+                        <a href="#" class="lnkAuthors">
+                            <i class="material-icons">contacts</i>
+                            <span>AUTHORS</span>
+                        </a>
+                        <hr style="margin-bottom: 0; margin-top: 0;" />
+                    </li>
+
+                    <li>
+                        <a href="#" class="lnkFavouriteBooks">
+                            <i class="material-icons">bookmarks</i>
+                            <span>FAVOURITE BOOK</span>
+                        </a>
+                        <hr style="margin-bottom: 0; margin-top: 0;" />
+                    </li>
+
+                    <li>
+                        <a href="#" class="lnkTranscationHistory">
+                            <i class="material-icons">account_balance_wallet</i>
+                            <span>TRANSCATION HISTORY</span>
+                        </a>
+                        <hr style="margin-bottom: 0; margin-top: 0;" />
+                    </li>
+
+                    <li>
+                        <a href="#" class="lnkMyProfile">
+                            <i class="material-icons">account_box</i>
+                            <span>MY PROFILE</span>
+                        </a>
+                        <hr style="margin-bottom: 0; margin-top: 0;" />
+                    </li>
+
+                    <li>
+                        <a href="#" class="lnkChangePassword">
+                            <i class="material-icons">settings_applications</i>
+                            <span>CHANGE PASSWORD</span>
+                        </a>
+                        <hr style="margin-bottom: 0; margin-top: 0;" />
+                    </li>
+
+                    <li>
+                        <a href="#" class="lnkSellWithUs">
+                            <i class="material-icons">shopping_cart</i>
+                            <span>SELL WITH US</span>
+                        </a>
+                        <hr style="margin-bottom: 0; margin-top: 0;" />
+                    </li>
+
+                    <li>
+                        <a href="#" class="lnkLogout">
+                            <i class="material-icons">lock</i>
+                            <span>LOGOUT</span>
                         </a>
                         <hr style="margin-bottom: 0; margin-top: 0;" />
                     </li>
@@ -123,23 +187,29 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="body">
-                            <div class="row">
-                                <a href="#" class="btnStore" data-action="videos">Videos</a>
-                            </div>
+                            <h4 style="color: #03A9F4;">STORE </h4>
                         </div>
                     </div>
+                </div>
+
+                <div class="col-md-4">
                     <div class="card">
                         <div class="body">
-                            <div class="row">
-                                <a href="#" class="btnStore" data-action="ebooks">E-Books</a>
-                            </div>
+                            <a href="#" class="btnStore" data-action="video">Videos</a>
                         </div>
                     </div>
+                </div>
+                <div class="col-md-4">
                     <div class="card">
                         <div class="body">
-                            <div class="row">
-                                <a href="#" class="btnStore" data-action="books">Books</a>
-                            </div>
+                            <a href="#" class="btnStore" data-action="pdf">E-Books</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="body">
+                            <a href="#" class="btnStore" data-action="epub">Books</a>
                         </div>
                     </div>
                 </div>
@@ -147,7 +217,12 @@
 
         </div>
     </section>
-    <script>if (typeof module === 'object') { window.module = module; module = undefined; }</script>
+    <script>
+        if (typeof module === 'object') {
+            window.module = module;
+            module = undefined;
+        }
+    </script>
     <script src="THEME/plugins/jquery/jquery.min.js"></script>
     <script src="THEME/plugins/bootstrap/js/bootstrap.js"></script>
     <script src="THEME/plugins/bootstrap-select/js/bootstrap-select.js"></script>
@@ -158,16 +233,19 @@
     <script src="THEME/js/custom.js"></script>
 
     <script>
-        $(".btnStore").click(function (e) {
+        $(".btnStore").click(function(e) {
             e.preventDefault();
 
             var action = $(this).data("action");
-            window.localStorage.setItem("store", JSON.stringify(action));
+            window.localStorage.removeItem("store");
+            window.localStorage.setItem("store", action);
             window.location.href = "category.html";
         });
     </script>
 
-    <script>if (window.module) module = window.module;</script>
+    <script>
+        if (window.module) module = window.module;
+    </script>
 </body>
 
 </html>
