--- a/viewer.html
+++ b/viewer.html
@@ -1,16 +1,15 @@
 <html>
-  <head>
+
+<head>
     <script src='./public/lib/webviewer.min.js'></script>
     <script src='./THEME/js/custom.js'></script>
-    
-  </head>
+</head>
 
-  <body style="margin: 0; padding: 0;">
-    <div id='viewer'>
+<body style="margin: 0; padding: 0;">
+    <div id='viewer'></div>
+    <script>
+        require('./viewer.js');
+    </script>
+</body>
 
-    </div>
-
-    <script>require('./viewer.js');</script>
-    
-  </body>
 </html>
