Author list and detail page

--- a/main.html
+++ b/main.html
@@ -115,7 +115,7 @@
                     </li>
 
                     <li>
-                        <a href="#" class="lnkAuthors">
+                        <a href="authorlist.html" class="">
                             <i class="material-icons">contacts</i>
                             <span>AUTHORS</span>
                         </a>
