--- a/bookdetail.html
+++ b/bookdetail.html
@@ -24,8 +24,8 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="body">
+                          x`x`x
                             <div class="row bindBookDetail">
-
                             </div>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                     }
 
                     strBookDetail = '<div class="col-md-4">';
-                    strBookDetail = strBookDetail + '<img src="' + frontCoverUrl + arrBookDetail[0].front_cover + '" style="height: 550px; width: 350px;" />';
+                    strBookDetail = strBookDetail + '<img src="' + frontCoverUrl + arrBookDetail[0].front_cover + '" style="height: 450px; width: 100%;" />';
                     strBookDetail = strBookDetail + '</div>';
 
                     strBookDetail = strBookDetail + '<div class="col-md-8">';
