--- a/login.html
+++ b/login.html
@@ -148,9 +148,9 @@
                     // });
 
                     // if ($("#txtUsername").val() == "bygoz" && $("#txtPassword").val() == "123456") {
-                    //     window.localStorage.setItem("isAuthenticate", "Yes");
-                    //     window.localStorage.setItem("UserID", $("#txtUsername").val());
-                    //     window.location.href = "main.html";
+                        window.localStorage.setItem("isAuthenticate", "Yes");
+                        window.localStorage.setItem("UserID", $("#txtUsername").val());
+                        window.location.href = "main.html";
                     // }
                     // else {
                     //     alert('Username or password are wrong.');
