--- a/masterpage.html
+++ b/masterpage.html
@@ -48,7 +48,7 @@
                 <li>
                     <a href="login.html">
                         <i class="material-icons">shopping_cart</i>
-                        <span>Bygoz Store</span>
+                        <span>CART</span>
                     </a>
                 </li>
             </ul>
